--- a/admin.html
+++ b/admin.html
@@ -2415,31 +2415,28 @@
                 </div>
                 <!-- Compose Area -->
                 <div class="inbox-compose" id="inboxCompose">
-                  <div class="inbox-compose-inner">
-                    <div class="inbox-compose-from">
-                      <label><i class="fa-solid fa-at"></i> From:</label>
-                      <select class="inbox-compose-select" id="msgFromEmail">
-                        <option value="support@lingeriebysisioyin.store">
-                          support@
-                        </option>
-                        <option value="info@lingeriebysisioyin.store">
-                          info@
-                        </option>
-                        <option value="orders@lingeriebysisioyin.store">
-                          orders@
-                        </option>
-                        <option value="contact@lingeriebysisioyin.store">
-                          contact@
-                        </option>
-                      </select>
-                    </div>
-                    <textarea
-                      class="inbox-compose-textarea"
-                      id="msgReplyText"
-                      rows="1"
-                      placeholder="Type a message..."
-                    ></textarea>
-                  </div>
+                  <select
+                    class="inbox-compose-select"
+                    id="msgFromEmail"
+                    title="Send from"
+                  >
+                    <option value="support@lingeriebysisioyin.store">
+                      support@
+                    </option>
+                    <option value="info@lingeriebysisioyin.store">info@</option>
+                    <option value="orders@lingeriebysisioyin.store">
+                      orders@
+                    </option>
+                    <option value="contact@lingeriebysisioyin.store">
+                      contact@
+                    </option>
+                  </select>
+                  <textarea
+                    class="inbox-compose-textarea"
+                    id="msgReplyText"
+                    rows="1"
+                    placeholder="Type a message..."
+                  ></textarea>
                   <button
                     class="btn btn-primary inbox-send-btn"
                     id="msgSendReplyBtn"
